--- a/index.html
+++ b/index.html
@@ -26,27 +26,21 @@
 <body>
   <header class="Header">
     <h1>#ProgramadorFitness</h1>
-    <img src="./img/ProgramadorFitness.png" alt="#ProgramadorFitness">
-    <p>
-      Bienvenid@s a #ProgramadorFitness, serie de videos, donde te daré consejos para llevar una vida saludable y evitar el sedentarismo.
-      Recuerda... mente sana en cuerpo sano :)
-    </p>
-    <nav>
-      <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUbJFWQx8gcy1MK0lTLrdLR9" target="_blank" title="YouTube">
-        <i class="fab fa-youtube"></i>
-      </a>
-      <a href="https://facebook.com/programadorfitness" target="_blank" title="Facebook">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <a href="https://www.instagram.com/explore/tags/ProgramadorFitness/" target="_blank" title="Instagram">
-        <i class="fab fa-instagram"></i>
-      </a>
-    </nav>
+
   </header>
-  <main class="Main">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/9oQIylJ-JpU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </main>
+  <div>
+    <h1><div id="seccionRecargar" class="Fuente"></div></h1>
+  </div>
   <script src="./script.js"></script>
 </body>
 
 </html>
+<script type="text/javascript">
+  $(document).ready(function(){
+    setInterval(
+      function(){
+        $('#seccionRecargar').load('seccion.php');
+      },2000
+    );
+  });
+</script>
